--- a/packages/automation/requirements.txt
+++ b/packages/automation/requirements.txt
@@ -26,7 +26,7 @@ typer>=0.9.0
 azure-identity>=1.15.0
 azure-mgmt-resource>=23.0.0
 azure-mgmt-containerinstance>=10.1.0
-azure-mgmt-postgresql>=13.0.0
+azure-mgmt-rdbms>=10.0.0
 
 # Version Control
 gitpython>=3.1.40
