feat: premium site overhaul, SEO optimization & dependency restoration
- Complete premium site redesign (all 15 UPGRADE_PLAN steps)
- UX/UI polish: animations, glassmorphism, scroll reveals, back-to-top
- SEO: sitemap.ts, robots.ts, JsonLd, metadataBase, OG images, alt text
- Image optimization: removed double compression, added AVIF/WebP formats
- New components: AnimatedCounter, GlassCard, ImageCard, ScrollReveal, etc.
- New pages: investors, contact layout, loading skeleton
- Stripe integration: checkout, refunds, webhooks, reports (console)
- Fixed pnpm store config & restored all workspace dependencies
- Fixed @tailwindcss/oxide native binding resolution
- Added framer-motion + motion-dom + motion-utils

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 # exFAT drive: copy packages instead of symlink/hardlink
 node-linker=hoisted
 package-import-method=copy
-store-dir=.pnpm-store
+store-dir=C:\APPS\nzila-automation\.pnpm-store
+symlink=false
