--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -17,6 +17,7 @@
     "@nzila/db": "workspace:*",
     "@nzila/os-core": "workspace:*",
     "@nzila/blob": "workspace:*",
+    "@nzila/payments-stripe": "workspace:*",
     "@nzila/ui": "workspace:*",
     "drizzle-orm": "^0.39.0",
     "gray-matter": "^4.0.3",
