feat(ai-engine): Phase C  EPIC 1-7 full implementation
EPIC 1  Model Registry (DB-backed routing)
- packages/db/src/schema/ai_models.ts: new aiModels, aiDeployments, aiDeploymentRoutes tables
- packages/db/src/schema/index.ts: export ai_models schema
- packages/db/drizzle/0002_ai_model_registry.sql: migration SQL
- packages/db/drizzle/0003_supreme_goblin_queen.sql: drizzle-kit generated migration
- packages/ai-core/src/gateway.ts: resolveDeployment() DB-backed routing, backward-compat env fallback
- packages/ai-core/src/index.ts: export resolveDeployment + ResolvedDeployment
- apps/console/app/(dashboard)/console/ai/models/page.tsx: model registry dashboard

EPIC 2  Capability Profile Hard Enforcement
- packages/ai-core/src/errors.ts: full error taxonomy with factory functions + classifiers
- packages/ai-core/src/gateway.ts: hardened enforcePolicy() with modality, perFeatureMaxTokens, toolPermissions

EPIC 3  RAG Ingestion Pipeline
- packages/tools-runtime/src/knowledgeTool.ts: hash-based chunk IDs, dedup, ai.knowledge_ingested audit event
- packages/ai-core/src/rag/chunker.ts: standalone deterministic chunker module

EPIC 4  Action Engine + Attestation
- Verified complete (executeAction, attestation, actionsPolicy all existed)

EPIC 5  AI Observability Dashboard
- apps/console/app/(dashboard)/console/ai/overview/page.tsx: KPIs, requests, actions, budgets
- apps/console/app/(dashboard)/console/ai/usage/page.tsx: per-app/feature analytics

EPIC 6  Evidence Pack Integration
- tooling/scripts/generate-evidence-index.ts: --include-ai-actions, --ai-period flags + AI appendix
- packages/ai-core/src/evidence/collector.ts: evidence collector entry point

EPIC 7  SDK Enforcement (No Shadow AI)
- packages/ai-sdk/eslint-no-shadow-ai.mjs: ESLint flat config blocking direct provider imports
- packages/ai-sdk/package.json: ./eslint-no-shadow-ai export
- packages/ai-sdk/src/index.ts: governance enforcement header
- packages/ai-core/src/providers/azure-openai.ts: DO NOT IMPORT IN A

--- a/packages/ai-sdk/package.json
+++ b/packages/ai-sdk/package.json
@@ -8,7 +8,8 @@
     ".": "./src/index.ts",
     "./client": "./src/client.ts",
     "./streaming": "./src/streaming.ts",
-    "./types": "./src/types.ts"
+    "./types": "./src/types.ts",
+    "./eslint-no-shadow-ai": "./eslint-no-shadow-ai.mjs"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
