feat(qbo): scaffold @nzila/qbo package  Intuit QuickBooks Online integration
- OAuth 2.0 Authorization Code flow (buildAuthorizationUrl, exchangeCodeForTokens,
  refreshAccessToken, revokeToken, getValidToken with auto-refresh)
- QBO v3 REST API client (createQboClient)  raw fetch, no Intuit SDK dep
- Typed wrappers: qboAccounts, qboVendors, qboBills, qboJournalEntries
- Chart of Accounts helpers with R&D account detection (CRA SR&ED / NRC IRAP compliance)
- Zod-validated env (INTUIT_CLIENT_ID, INTUIT_CLIENT_SECRET, INTUIT_ENVIRONMENT)
- Typechecks clean

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,24 @@ NEXT_PUBLIC_CONSOLE_URL=https://console.nzila.app
 # ----- OpenAI -----
 OPENAI_API_KEY=
 OPENAI_PROJECT=
+
+# ----- AI Control Plane -----
+AI_DEFAULT_PROVIDER=openai          # azure_openai | openai | anthropic
+OPENAI_MODEL_TEXT=gpt-4o
+OPENAI_MODEL_EMBEDDINGS=text-embedding-3-small
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_API_VERSION=2024-06-01
+AZURE_OPENAI_DEPLOYMENT_TEXT=
+AZURE_OPENAI_DEPLOYMENT_EMBEDDINGS=
+ANTHROPIC_API_KEY=
+ANTHROPIC_MODEL_TEXT=claude-sonnet-4-6
+AI_EMBEDDINGS_PROVIDER=openai       # azure_openai | openai
+
+# ----- Intuit / QuickBooks Online -----
+# Get from https://developer.intuit.com → My Apps → your app → Keys & OAuth
+INTUIT_APP_ID=
+INTUIT_CLIENT_ID=
+INTUIT_CLIENT_SECRET=
+INTUIT_ENVIRONMENT=sandbox          # sandbox | production
+INTUIT_REDIRECT_URI=http://localhost:3000/api/auth/qbo/callback
