fix(tooling): suppress Pylance import errors for tooling/ml Python scripts
tooling/ml/ uses its own requirements.txt venv (pandas, numpy, sklearn,
joblib, psycopg2, azure-storage-blob) which is not the workspace .venv.
- .vscode/settings.json: python.analysis.ignore = [tooling/ml/**]
- tooling/ml/pyrightconfig.json: reportMissingImports + type errors = none

No source logic changed; py_compile CI gate is unaffected.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,11 @@
   "python.terminal.activateEnvironment": true,
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.autoImportCompletions": true,
+  // tooling/ml scripts use their own venv (requirements.txt) — suppress
+  // "could not be resolved" errors for packages not in the workspace venv.
+  "python.analysis.ignore": [
+    "tooling/ml/**"
+  ],
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": [
     "packages/automation"
