--- a/packages/ml-sdk/package.json
+++ b/packages/ml-sdk/package.json
@@ -7,7 +7,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./client": "./src/client.ts",
-    "./types": "./src/types.ts"
+    "./types": "./src/types.ts",
+    "./eslint-no-shadow-ml": "./eslint-no-shadow-ml.mjs"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
