feat: Union Eyes ML Pack v1 (Supervised)
* feat(db/ml): add mlScoresUECasesPriority and mlScoresUESlaRisk tables (PR1)

- Table G: ml_scores_ue_cases_priority
  - caseId (uuid, no FK - keeps ML schema decoupled from UE verticals)
  - score/predictedPriority/actualPriority, featuresJson, modelId, inferenceRunId
  - unique on (entityId, caseId, modelId); indexes on predictedPriority + occurredAt

- Table H: ml_scores_ue_sla_risk
  - probability/predictedBreach/actualBreach, featuresJson, modelId, inferenceRunId
  - unique on (entityId, caseId, modelId); indexes on predictedBreach + occurredAt

* feat(tooling/ml): UE supervised dataset builder (PR2)

- lib/ueFeatureEngineering.ts: pure TS feature engineering
  - buildUECaseFeatures(), toCsv(), UE_CASE_SCHEMA_JSON
  - 14 feature columns including dayOfWeek, hourOfDay, ageHoursAtSnapshot
  - Deterministic train/val/test split via djb2Hash(caseId) % 10

- build-ue-case-supervised-dataset.ts: CLI dataset builder
  - Queries ue_cases via raw SQL (db.execute); no Drizzle schema for UE verticals
  - Writes ue_case_priority_dataset_v1 + ue_case_sla_dataset_v1 to Blob
  - Registers mlDatasets rows + emits ml.dataset_built audit events

* feat(tooling/ml): train ue.case_priority_v1 multiclass classifier (PR3)

- lib/db_write.py: upsert_ue_priority_score(), upsert_ue_sla_risk_score()
- lib/metrics.py: build_supervised_multiclass_metrics(), build_supervised_binary_metrics()

- train_ue_case_priority.py:
  - GradientBoostingClassifier(n_estimators=200, max_depth=4, lr=0.1, subsample=0.8)
  - OrdinalEncoder on categoricals, LabelEncoder on y
  - Metrics: accuracy, macro_f1, confusion matrix, per-class P/R/F1, calibration
  - Full audit trail: ml.training_started/completed + ml.model_registered
  - Artifact + metrics JSON uploaded to Blob, sha256 fingerprinted

* feat(tooling/ml): train ue.sla_breach_risk_v1 binary classifier (PR4)

- GradientBoostingClassifier(n_estimators=200, max_depth=3, lr=0.05, subsample=0.8)
- choose_threshold

--- a/apps/union-eyes/tsconfig.json
+++ b/apps/union-eyes/tsconfig.json
@@ -4,9 +4,9 @@
     "paths": {
       "@/*": ["./*"],
       "@nzila/ui": ["../../packages/ui/src"],
-      "@nzila/db": ["../../packages/db/src/index.ts"],
-      "@nzila/db/schema": ["../../packages/db/src/schema/index.ts"],
-      "@nzila/db/client": ["../../packages/db/src/client.ts"]
+      "@nzila/ml-sdk": ["../../packages/ml-sdk/src/index.ts"],
+      "@nzila/ml-sdk/client": ["../../packages/ml-sdk/src/client.ts"],
+      "@nzila/ml-sdk/types": ["../../packages/ml-sdk/src/types.ts"]
     }
   },
   "include": [
