--- a/apps/partners/tsconfig.json
+++ b/apps/partners/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./*"],
-      "@nzila/ui": ["../../packages/ui/src"]
+      "@nzila/ui": ["../../packages/ui/src"],
+      "@nzila/db": ["../../packages/db/src/index.ts"],
+      "@nzila/db/schema": ["../../packages/db/src/schema/index.ts"],
+      "@nzila/db/client": ["../../packages/db/src/client.ts"]
     }
   },
   "include": [
