feat(phase-0): repo contract, docs, invariant gates, evidence SSoT
- Add ARCHITECTURE.md, SECURITY.md, CONTRIBUTING.md, CODEOWNERS
- Add docs/repo-contract/{README,invariants,versioning}.md
- Convert tooling/scripts/generate-evidence-index.ts to thin wrapper (244 lines)
- All schema/upload logic consolidated in os-core/src/evidence/generate-evidence-index.ts
- Export buildLocalEvidencePackIndex from os-core for local-only mode
- Add 15+ new export paths to os-core/package.json
- Add contract tests: no-duplicate-evidence-generator, invariants (INV-01..05)

Closes PR0.1a, PR0.1b, PR0.2a, PR0.2b

--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -6,13 +6,26 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./policy": "./src/policy.ts",
+    "./policy": "./src/policy/index.ts",
     "./templates": "./src/templates.ts",
     "./types": "./src/types.ts",
     "./hash": "./src/hash.ts",
     "./evidence": "./src/evidence/index.ts",
     "./evidence/types": "./src/evidence/types.ts",
-    "./evidence/builder": "./src/evidence/builder.ts"
+    "./evidence/builder": "./src/evidence/builder.ts",
+    "./evidence/generate-evidence-index": "./src/evidence/generate-evidence-index.ts",
+    "./evidence/redaction": "./src/evidence/redaction.ts",
+    "./evidence/collectors/security": "./src/evidence/collectors/security.ts",
+    "./evidence/collectors/incident-sims": "./src/evidence/collectors/incident-sims.ts",
+    "./evidence/collectors/schema": "./src/evidence/collectors/schema.ts",
+    "./evidence/collectors/ai-evals": "./src/evidence/collectors/ai-evals.ts",
+    "./evidence/collectors/ml-drift": "./src/evidence/collectors/ml-drift.ts",
+    "./evidence/collectors/stripe-close": "./src/evidence/collectors/stripe-close.ts",
+    "./evidence/collectors/year-end": "./src/evidence/collectors/year-end.ts",
+    "./telemetry": "./src/telemetry/index.ts",
+    "./retention": "./src/retention/index.ts",
+    "./config": "./src/config/env.ts",
+    "./secrets": "./src/secrets/keyvault.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
