fix(os-core): resolve Azure SDK and @nzila/db TS module errors
- Add @azure/keyvault-secrets and @azure/identity to optionalDependencies
  (keyvault.ts uses dynamic import so they are runtime-optional)
- Add src/secrets/vendor.d.ts with ambient module fallback declarations
  (TS uses real package types when installed; any-typed fallback otherwise)
- Add @nzila/db as devDependency + tsconfig paths for db subpath exports
  so TypeScript resolves partnerEntities and other schema symbols correctly
  when compiling os-core/policy/authorize.ts
- Add all @nzila/os-core/* subpath aliases to tooling/tsconfig.json
  so tooling/security/*.ts imports resolve (TS2307 fix)
- pnpm-lock.yaml updated with Azure SDK packages

--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -35,6 +35,8 @@
     "zod": "^3.24.0"
   },
   "optionalDependencies": {
+    "@azure/identity": "^4.5.0",
+    "@azure/keyvault-secrets": "^4.9.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.56.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.57.0",
@@ -43,6 +45,7 @@
     "@opentelemetry/semantic-conventions": "^1.28.0"
   },
   "devDependencies": {
+    "@nzila/db": "workspace:*",
     "@types/node": "^22",
     "typescript": "^5",
     "vitest": "^4.0.18"
