--- a/tooling/tsconfig.json
+++ b/tooling/tsconfig.json
@@ -7,7 +7,27 @@
       "@nzila/db/client": ["../packages/db/src/client.ts"],
       "@nzila/blob": ["../packages/blob/src/index.ts"],
       "@nzila/ai-core": ["../packages/ai-core/src/index.ts"],
-      "@nzila/ml-core": ["../packages/ml-core/src/index.ts"]
+      "@nzila/ml-core": ["../packages/ml-core/src/index.ts"],
+      "@nzila/os-core": ["../packages/os-core/src/index.ts"],
+      "@nzila/os-core/policy": ["../packages/os-core/src/policy/index.ts"],
+      "@nzila/os-core/telemetry": ["../packages/os-core/src/telemetry/index.ts"],
+      "@nzila/os-core/retention": ["../packages/os-core/src/retention/index.ts"],
+      "@nzila/os-core/config": ["../packages/os-core/src/config/env.ts"],
+      "@nzila/os-core/secrets": ["../packages/os-core/src/secrets/keyvault.ts"],
+      "@nzila/os-core/types": ["../packages/os-core/src/types.ts"],
+      "@nzila/os-core/hash": ["../packages/os-core/src/hash.ts"],
+      "@nzila/os-core/evidence": ["../packages/os-core/src/evidence/index.ts"],
+      "@nzila/os-core/evidence/types": ["../packages/os-core/src/evidence/types.ts"],
+      "@nzila/os-core/evidence/builder": ["../packages/os-core/src/evidence/builder.ts"],
+      "@nzila/os-core/evidence/generate-evidence-index": ["../packages/os-core/src/evidence/generate-evidence-index.ts"],
+      "@nzila/os-core/evidence/redaction": ["../packages/os-core/src/evidence/redaction.ts"],
+      "@nzila/os-core/evidence/collectors/security": ["../packages/os-core/src/evidence/collectors/security.ts"],
+      "@nzila/os-core/evidence/collectors/incident-sims": ["../packages/os-core/src/evidence/collectors/incident-sims.ts"],
+      "@nzila/os-core/evidence/collectors/schema": ["../packages/os-core/src/evidence/collectors/schema.ts"],
+      "@nzila/os-core/evidence/collectors/ai-evals": ["../packages/os-core/src/evidence/collectors/ai-evals.ts"],
+      "@nzila/os-core/evidence/collectors/ml-drift": ["../packages/os-core/src/evidence/collectors/ml-drift.ts"],
+      "@nzila/os-core/evidence/collectors/stripe-close": ["../packages/os-core/src/evidence/collectors/stripe-close.ts"],
+      "@nzila/os-core/evidence/collectors/year-end": ["../packages/os-core/src/evidence/collectors/year-end.ts"]
     }
   },
   "include": ["**/*.ts"],
