--- a/apps/partners/package.json
+++ b/apps/partners/package.json
@@ -26,7 +26,9 @@
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@nzila/ai-sdk": "workspace:*",
     "@nzila/config": "workspace:*",
+    "@nzila/ml-sdk": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
