--- a/.github/workflows/nzila-playbook-runner.yml
+++ b/.github/workflows/nzila-playbook-runner.yml
@@ -29,9 +29,7 @@ on:
         default: "{}"
 
 permissions:
-  contents: write
-  pull-requests: write
-  issues: write
+  contents: read
   actions: read
 
 env:
@@ -76,7 +74,7 @@ jobs:
         id: contract_tests
         run: |
           set +e
-          pnpm --filter @nzila/contract-tests test 2>&1 | tee /tmp/contract-results.txt
+          pnpm contract-tests 2>&1 | tee /tmp/contract-results.txt
           EXIT_CODE=${PIPESTATUS[0]}
           echo "exit_code=$EXIT_CODE" >> $GITHUB_OUTPUT
           if [ $EXIT_CODE -ne 0 ]; then
@@ -144,6 +142,27 @@ jobs:
       # ============================================================
       # Upload results as artifacts
       # ============================================================
+      - name: Generate JSON summary for orchestrator
+        if: always()
+        run: |
+          cat > /tmp/playbook-summary.json <<EOF
+          {
+            "correlation_id": "$CORRELATION_ID",
+            "playbook": "$PLAYBOOK",
+            "dry_run": $DRY_RUN,
+            "run_id": "${{ github.run_id }}",
+            "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+            "started_at": "$STARTED_AT",
+            "completed_at": "$(date -u +%FT%TZ)",
+            "results": {
+              "contract_tests": "${CONTRACT_TESTS_FAILED:-skipped}",
+              "lint": "${LINT_FAILED:-skipped}",
+              "typecheck": "${TYPECHECK_FAILED:-skipped}",
+              "unit_tests": "${UNIT_TESTS_FAILED:-skipped}"
+            }
+          }
+          EOF
+
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -152,8 +171,17 @@ jobs:
           path: /tmp/*-results.txt
           retention-days: 30
 
+      - name: Upload summary JSON
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playbook-summary-${{ inputs.correlation_id }}
+          path: /tmp/playbook-summary.json
+          retention-days: 90
+
       # ============================================================
       # On failure: create issue (if not dry_run)
+      # Requires NZILA_AUTOMATION_TOKEN secret with issues:write scope
       # ============================================================
       - name: Create issue on failure
         if: |
@@ -164,7 +192,10 @@ jobs:
             env.UNIT_TESTS_FAILED == 'true'
           )
         uses: actions/github-script@v7
+        env:
+          GH_TOKEN: ${{ secrets.NZILA_AUTOMATION_TOKEN }}
         with:
+          github-token: ${{ secrets.NZILA_AUTOMATION_TOKEN }}
           script: |
             const failures = [];
             if (process.env.CONTRACT_TESTS_FAILED === 'true') failures.push('Contract Tests');
