--- a/.github/workflows/release-train.yml
+++ b/.github/workflows/release-train.yml
@@ -54,13 +54,13 @@ jobs:
       - name: Verify schema snapshot (no drift)
         run: pnpm tsx tooling/db/schema-snapshot.ts verify
 
-      - name: AI eval gate check (if report exists)
+      - name: AI eval gate check (mandatory)
         run: |
-          if [ -f tooling/ai-evals/report.json ]; then
-            pnpm tsx tooling/ai-evals/eval-gate.ts tooling/ai-evals/report.json
-          else
-            echo "No eval report found — run evals before release for full gate enforcement"
+          if [ ! -f tooling/ai-evals/report.json ]; then
+            echo "::error::AI eval report not found. Run 'pnpm tsx tooling/ai-evals/run-evals-ci.ts' or the full eval harness before releasing."
+            exit 1
           fi
+          pnpm tsx tooling/ai-evals/eval-gate.ts tooling/ai-evals/report.json
 
   # ─── Gate 2: Security scans ───────────────────────────────────────────────
   security-gate:
