--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,6 +146,40 @@ jobs:
           grep -q "collectMlEvidence" tooling/scripts/generate-evidence-index.ts  || { echo "collectMlEvidence not wired"; exit 1; }
           echo "Evidence pack ML wiring verified."
 
+  # ─── AI Eval Gate (mandatory — no "if report exists" skip) ─────────────────
+  ai-eval-gate:
+    runs-on: ubuntu-latest
+    name: AI Eval Gate
+    needs: [lint-and-typecheck]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.11.0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run AI eval harness (CI stub mode)
+        run: pnpm tsx tooling/ai-evals/run-evals-ci.ts
+
+      - name: Enforce eval gate thresholds
+        run: pnpm tsx tooling/ai-evals/eval-gate.ts tooling/ai-evals/report.json
+
+      - name: Upload eval report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ai-eval-report
+          path: tooling/ai-evals/report.json
+          retention-days: 30
+
   # ─── Architectural Invariants & Contract Tests ────────────────────────────
   contract-tests:
     runs-on: ubuntu-latest
