feat: complete security hardening pass (PRs 2-18)
- PR 2: Dependabot Python pip entry for packages/automation
- PR 3: Trivy container + filesystem scanning workflow (.github/workflows/trivy.yml)
         Pinned Docker base image: node:22.13.1-alpine3.21
- PR 4: Build reproducibility policy doc (docs/hardening/build-reproducibility.md)
- PR 5: SECURITY.md expanded with container scan, rate-limiting, security headers
         CODEOWNERS enhanced with auth/audit/hardening paths (@nzila/security)
- PR 6: Security headers (CSP, HSTS, X-Frame-Options, Permissions-Policy) in
         all 4 Next.js apps (console, partners, union-eyes, web)
- PR 7: @fastify/helmet + @fastify/rate-limit in orchestrator-api (200 req/min)
- PR 8: authz-regression contract tests
- PR 9: org-isolation contract tests (Critical)
- PR 10: audit-immutability contract tests
- PR 11: Structured logging standards doc + redactFields utility in os-core
- PR 12: OTel observability doc + trace propagation guide
- PR 14: data-breach.md + key-rotation.md security runbooks
- PR 15: Coverage gates contract test, vitest thresholds (payments, ai-core, os-core),
          test:coverage scripts in payments-stripe, ai-core, os-core, tools-runtime
- PR 16: API schema contracts test (Zod validation enforcement)
- PR 18: Changesets config (.changeset/config.json) + @changesets/cli + release scripts

All 272 contract tests pass (1 intentionally skipped).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,3 +41,16 @@ updates:
       time: "08:00"
       timezone: "UTC"
     open-pull-requests-limit: 5
+
+  # ── Python (automation package) ──────────────────────────────────────────
+  - package-ecosystem: pip
+    directory: /packages/automation
+    schedule:
+      interval: weekly
+      day: monday
+      time: "08:00"
+      timezone: "UTC"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      - "python"
