--- a/apps/orchestrator-api/package.json
+++ b/apps/orchestrator-api/package.json
@@ -12,6 +12,8 @@
     "build": "echo 'orchestrator-api: no build step (tsx runtime)'"
   },
   "dependencies": {
+    "@fastify/helmet": "^12.0.0",
+    "@fastify/rate-limit": "^10.0.0",
     "@nzila/db": "workspace:*",
     "drizzle-orm": "^0.39.0",
     "fastify": "^5.3.3",
