--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
     "test": "turbo test",
+    "test:coverage": "turbo test:coverage",
     "contract-tests": "vitest run --config tooling/contract-tests/vitest.config.ts",
+    "release": "changeset publish",
+    "version-packages": "changeset version",
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -21,6 +24,7 @@
     "prepare": "lefthook install"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.0",
     "@tailwindcss/oxide": "^4.2.0",
     "lefthook": "^1.11.0",
     "prettier": "^3.4.2",
