--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@nzila/blob": "workspace:*",
