--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -29,7 +29,8 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "test": "vitest run --passWithNoTests"
+    "test": "vitest run --passWithNoTests",
+    "test:coverage": "vitest run --coverage --passWithNoTests"
   },
   "dependencies": {
     "zod": "^3.24.0"
