--- a/packages/payments-stripe/package.json
+++ b/packages/payments-stripe/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "clean": "rm -rf dist node_modules .turbo"
   },
   "dependencies": {
