--- a/lefthook.yml
+++ b/lefthook.yml
@@ -8,7 +8,7 @@ pre-commit:
     gitleaks:
       glob: "*.{ts,tsx,js,jsx,json,env,yml,yaml,md,sh,ps1,py}"
       run: >
-        npx gitleaks@latest detect
+        gitleaks detect
         --source .
         --config .gitleaks.toml
         --no-banner
@@ -18,6 +18,7 @@ pre-commit:
         🔒 Gitleaks detected potential secrets in staged files.
         Review the output above and remove or rotate any exposed credentials.
         See docs/hardening/secrets.md for guidance.
+        Install gitleaks: https://github.com/gitleaks/gitleaks#installing
 
     lint-staged:
       glob: "*.{ts,tsx,js,jsx,mjs}"
