--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "secret-scan": "gitleaks detect --source . --config .gitleaks.toml --no-banner --verbose",
     "link": "pwsh -NoProfile -File scripts/link-workspaces.ps1",
     "prepare": "lefthook install"
   },
