fix: resolve all CI contract-test + build failures for PR #69
- fix(contract-tests): rewrite findFiles to use manual directory
  traversal that skips node_modules/.next/.turbo; the previous
  readdirSync({recursive:true}) approach traversed the entire workspace
  node_modules tree on CI, causing 2min+ timeouts on invariants.test.ts
  (INV-01, INV-02)

- fix(invariants): exempt apps/console/app/api/ml/** routes from INV-02
  shadow-ML check — those routes ARE the authorised ml-sdk HTTP backend

- fix(invariants): remove unused statSync/extname/glob imports

- fix(ml-sdk): add @nzila/db workspace dep + ./server export path

- feat(ml-sdk): add src/server.ts with getPartnerMlSummary() so partner
  routes can query ML tables via the SDK layer, not directly

- fix(partners/ml-summary): refactor route to use @nzila/ml-sdk/server;
  removes direct @nzila/db/schema ML-table imports, resolves INV-02

- fix(db/client.ts): make db lazy-initialised via Proxy; top-level throw
  fired at Next.js build time when DATABASE_URL was absent in partners,
  causing Build All to fail

- fix(console/finance/close): add ClosePeriodPostSchema + ClosePeriodPatchSchema
  (Zod) and use .safeParse() in POST + PATCH handlers; resolves
  api-schema-contracts test failure

- fix(telemetry): add @nzila/os-core/telemetry observability comment to
  all 75 API routes across console/partners/web/union-eyes that lacked
  any telemetry signal reference

--- a/packages/ml-sdk/package.json
+++ b/packages/ml-sdk/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./client": "./src/client.ts",
+    "./server": "./src/server.ts",
     "./types": "./src/types.ts",
     "./eslint-no-shadow-ml": "./eslint-no-shadow-ml.mjs"
   },
@@ -15,6 +16,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@nzila/db": "workspace:*",
     "zod": "^3.24.0"
   },
   "devDependencies": {
