fix(ci): disable CodeQL SARIF upload — Code Scanning not enabled on repo
Change upload: true → upload: never so CodeQL analysis runs and produces
artifacts but does not attempt to push to GitHub Code Scanning dashboard,
which requires Advanced Security (not enabled on this repo).

Analysis output is still collected as evidence in codeql-results/.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,7 +40,7 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: /language:${{ matrix.language }}
-          upload: true
+          upload: never
           output: codeql-results/${{ matrix.language }}
 
       - name: Collect CodeQL results as evidence
