feat: structural enforcement upgrade — scoped DAL, auto-audit, CLI, boot assertions (#76)
* feat: structural enforcement upgrade — scoped DAL, auto-audit, CLI, boot assertions

- Scoped DAL (createScopedDb) for entity isolation at DAL level
- Automatic audit emission (withAudit) with SHA-256 hash chain
- Vertical scaffolding CLI (nzila create-vertical) for governance-complete apps
- Boot assertions (assertBootInvariants) preventing unvalidated runtime
- ESLint no-shadow-db rule blocking raw DB imports in all 4 apps
- 9 new invariants (INV-06 to INV-14) with 4 new contract test suites
- 27 unit tests for scoped DAL and audit modules
- Architecture docs, migration guide, enforcement summary

New packages: @nzila/db/scoped, @nzila/db/audit, @nzila/db/raw, @nzila/cli
Modified: os-core (boot-assert export), db (new exports)
Tests: 384 contract + 27 unit = 411 total, 0 failures

* fix: normalize path separators in contract tests for cross-platform CI

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,14 +7,19 @@
   "exports": {
     ".": "./src/index.ts",
     "./schema": "./src/schema/index.ts",
-    "./client": "./src/client.ts"
+    "./client": "./src/client.ts",
+    "./raw": "./src/raw.ts",
+    "./scoped": "./src/scoped.ts",
+    "./audit": "./src/audit.ts",
+    "./eslint-no-shadow-db": "./eslint-no-shadow-db.mjs"
   },
   "scripts": {
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run --passWithNoTests"
   },
   "dependencies": {
     "drizzle-orm": "^0.39.0",
@@ -23,6 +28,7 @@
   },
   "devDependencies": {
     "drizzle-kit": "^0.30.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   }
 }
