--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -27,7 +27,8 @@
     "./config": "./src/config/env.ts",
     "./secrets": "./src/secrets/keyvault.ts",
     "./rateLimit": "./src/rateLimit.ts",
-    "./ai-env": "./src/ai-env.ts"
+    "./ai-env": "./src/ai-env.ts",
+    "./boot-assert": "./src/boot-assert.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
