fix: add vitest configs for 5 packages without own config
orchestrator-api, union-eyes, blob, ml-core, and tax had no
vitest.config.ts, so running 'vitest run' inside them walked up to the
root config (which lists all projects), causing CI to fail.

Each now gets a minimal defineProject with passWithNoTests.
Root vitest.config.ts updated to include all 18 workspace projects.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
   // Drizzle migrations are PostgreSQL — prevent MSSQL linter false positives
   "files.associations": {
     "packages/db/drizzle/**/*.sql": "sql"
-  }
+  },
+  "vitest.disableWorkspaceWarning": true
 }
