fix: make Trivy CRITICAL CVEs PR-blocking + fix passWithNoTests in configs
Trivy container scan:
- Table output step now uses exit-code: 1 with severity: CRITICAL
- SARIF and filesystem scans remain informational (exit-code: 0)
- Critical container CVEs now fail PR checks

Vitest configs:
- Remove passWithNoTests from defineProject configs (not a valid
  ProjectConfig property, it's a CLI-only flag)
- Add --passWithNoTests to test scripts for partners, qbo, ml-sdk,
  ai-sdk (packages with no test files yet)

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -47,15 +47,15 @@ jobs:
             --target base \
             .
 
-      - name: Run Trivy (table output)
+      - name: Run Trivy (table output — blocks on CRITICAL)
         uses: aquasecurity/trivy-action@0.34.1
         with:
           image-ref: ${{ matrix.image }}:scan
           format: table
-          exit-code: 0
+          exit-code: 1
           ignore-unfixed: true
           vuln-type: os,library
-          severity: CRITICAL,HIGH
+          severity: CRITICAL
 
       - name: Run Trivy (SARIF — GitHub Security tab)
         uses: aquasecurity/trivy-action@0.34.1
