--- a/packages/qbo/package.json
+++ b/packages/qbo/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "clean": "rm -rf dist node_modules .turbo"
   },
   "dependencies": {
