feat(governance): security enforcement — red-team, workflows, ESLint provider rules
PR-05: Red-team adversarial test harness (8 attack vectors + 3 ABR-specific)
PR-06: ESLint no-direct-provider-import rule wired into all 4 apps
PR-07: Unified nzila-governance.yml reusable workflow + CI integration

Contract test: INV-14 (ESLint governance rules in all apps)
Red-team: RED-TEAM-001 through RED-TEAM-008, RED-TEAM-ABR-001 through ABR-003
CI: red-team + hash-chain-drift jobs added to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,3 +254,52 @@ jobs:
             pnpm tsx tooling/db/schema-snapshot.ts verify
           fi
 
+  # ─── Red-Team Adversarial Tests ───────────────────────────────────────────
+  red-team:
+    runs-on: ubuntu-latest
+    name: Red-Team Adversarial
+    needs: [lint-and-typecheck]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.11.0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run red-team adversarial tests
+        run: npx vitest run --config security/redteam/vitest.config.ts --reporter=verbose
+
+  # ─── Hash Chain Drift Detection ───────────────────────────────────────────
+  hash-chain-drift:
+    runs-on: ubuntu-latest
+    name: Hash Chain Drift
+    needs: [lint-and-typecheck]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.11.0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run hash chain drift tests
+        run: |
+          npx vitest run \
+            --config tooling/contract-tests/vitest.config.ts \
+            tooling/contract-tests/hash-chain-drift.test.ts
+
