feat(governance): vertical modules — ABR, Union Eyes, Fintech + governance profiles
PR-ABR-01: Confidential reporting model (identity vault, need-to-know, dual-control)
PR-UE-01: Case evidence export (litigation hold, doc version hashing, role graph DAG)
PR-FIN-01: Key lifecycle & dual control (rotation, financial dual-control, DR sim)
PHASE-3: Governance profiles for 7 verticals (immutable controls enforced)

Contract tests: INV-15 (profiles), INV-16/17/18 (UE), INV-19/20/21 (FIN)
No profile can disable org-isolation, audit-emission, evidence-sealing, or hash-chain.

--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -28,7 +28,10 @@
     "./secrets": "./src/secrets/keyvault.ts",
     "./rateLimit": "./src/rateLimit.ts",
     "./ai-env": "./src/ai-env.ts",
-    "./boot-assert": "./src/boot-assert.ts"
+    "./boot-assert": "./src/boot-assert.ts",
+    "./abr/confidential-reporting": "./src/abr/confidential-reporting.ts",
+    "./ue/case-evidence-export": "./src/ue/case-evidence-export.ts",
+    "./fin/key-lifecycle": "./src/fin/key-lifecycle.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
