feat(governance): CLI profile flag + master GA gate
PHASE-4: CLI create-vertical --profile flag with governance.json generation
PHASE-5: Master GA gate (15 mandatory checks, no bypass)

GA gate checks: org-isolation, audit-emission, audit-mandatory, evidence-sealing,
hash-chain, eslint-governance, no-direct-provider, governance-profiles, ci-governance,
red-team, contract-tests, codeowners, hash-chain-triggers, vertical-modules, auth-middleware

CODEOWNERS: Added /governance/ and /security/redteam/ ownership entries

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -28,6 +28,10 @@
 /ops/compliance/**             @nzila/security @nzila/platform
 /tooling/contract-tests/**     @nzila/platform
 
+# Governance — immutable controls, profiles, GA gate
+/governance/**                 @nzila/platform @nzila/security
+/security/redteam/**           @nzila/security @nzila/platform
+
 # AI / ML packages
 /packages/ai-core/**  @nzila/ai
 /packages/ai-sdk/**   @nzila/ai @nzila/eng
