--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -15,6 +15,9 @@
     "./evidence/builder": "./src/evidence/builder.ts",
     "./evidence/generate-evidence-index": "./src/evidence/generate-evidence-index.ts",
     "./evidence/redaction": "./src/evidence/redaction.ts",
+    "./evidence/lifecycle": "./src/evidence/lifecycle.ts",
+    "./evidence/verify-pack": "./src/evidence/verify-pack.ts",
+    "./evidence/seal": "./src/evidence/seal.ts",
     "./evidence/collectors/security": "./src/evidence/collectors/security.ts",
     "./evidence/collectors/incident-sims": "./src/evidence/collectors/incident-sims.ts",
     "./evidence/collectors/schema": "./src/evidence/collectors/schema.ts",
