feat(pr05): evidence audit, scoped DAL, NzilaOS alignment
* feat(pr05): evidence lifecycle, org-scoped registry & contract tests

Evidence lifecycle (packages/os-core):
- lifecycle.ts: seal/unseal invariants, EvidenceSealViolationError
- verify-pack.ts: pack integrity verification
- types.ts, redaction.ts, generate-evidence-index.ts: extended evidence types
- index.ts: updated barrel exports

DB layer (packages/db):
- audit.ts: hash-chain helper, content hash computation
- scoped.ts: org-scoped query enforcement (+orgId on ReadOnlyScopedDb)
- org-registry.ts: org-scoped model registry + violations surface
- index.ts: updated exports

Contract tests (tooling/contract-tests):
- org-scoped-registry.test.ts: assert all business tables carry org FK
- evidence-lifecycle.test.ts: seal lifecycle state machine
- audit-mutation-coverage.test.ts: every write path produces audit entry
- scoped-dal-negative.test.ts: cross-org data bleed prevention
- db-boundary.test.ts: updated for new org-registry surface

Security / redteam:
- adversarial.test.ts: updated assertions
- breach-harness-extended.test.ts: new extended harness
- redteam-results.json: updated run results

Docs:
- EVIDENCE_LIFECYCLE.md + ORG_SCOPED_TABLES.md: architecture docs

Ops + tooling:
- nzila-playbook-runner.yml, CODEOWNERS, .markdownlint config

Apps:
- console, partners, web: page updates + org terminology alignment

fix(db): audit.test.ts mock add orgId (ReadOnlyScopedDb now requires it)
fix(os-core): redaction.ts cast via unknown for EvidenceArtifact->sha256

NOTE: lefthook gitleaks skipped (binary not installed — run: brew/scoop install gitleaks)

* fix: markdownlint MD013 — allow 120-char lines, relax tables/code-blocks

* fix: python.analysis.ignore — suppress satellite repo Django errors from automation workspace

* fix: suppress MSSQL false-positive linting on PostgreSQL Drizzle migrations

- files.associations: drizzle/**/*.sql -> pgsql (not sql/TSQL)
- mssql.linting.enable: false (workspace targets 

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,12 @@
   // tooling/ml scripts use their own venv (requirements.txt) — suppress
   // "could not be resolved" errors for packages not in the workspace venv.
   "python.analysis.ignore": [
-    "tooling/ml/**"
+    "tooling/ml/**",
+    // Satellite repos have their own venv + pyrightconfig.json.
+    // Suppress Pylance analysis from the automation workspace context
+    // to avoid false "could not be resolved" Django/pytest errors.
+    "../nzila-abr-insights/backend/**",
+    "../nzila-union-eyes/backend/**"
   ],
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": [
@@ -28,9 +33,14 @@
   },
 
   // ── SQL ─────────────────────────────────────────────────
-  // Drizzle migrations are PostgreSQL — prevent MSSQL linter false positives
+  // Drizzle migrations are PostgreSQL.
+  // Associate with "pgsql" so the MSSQL extension does not lint them —
+  // MSSQL syntax like REPLACE/RAISE/BEFORE TRIGGER is invalid TSQL
+  // but perfectly valid PostgreSQL, causing false-positive errors.
   "files.associations": {
-    "packages/db/drizzle/**/*.sql": "sql"
+    "packages/db/drizzle/**/*.sql": "pgsql"
   },
+  // Disable MSSQL linting workspace-wide: this repo targets PostgreSQL only.
+  "mssql.linting.enable": false,
   "vitest.disableWorkspaceWarning": true
 }
