--- a/apps/union-eyes/services/financial-service/tsconfig.json
+++ b/apps/union-eyes/services/financial-service/tsconfig.json
@@ -1,11 +1,10 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
     "module": "commonjs",
     "moduleResolution": "node",
-    "ignoreDeprecations": "6.0",
     "target": "ES2020",
     "esModuleInterop": true,
     "declaration": true,
