--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - /app/apps/web/node_modules
       - /app/apps/console/node_modules
       - /app/apps/partners/node_modules
+      - /app/apps/union-eyes/node_modules
+      - /app/apps/abr/node_modules
       - /app/packages/ui/node_modules
       - /app/packages/config/node_modules
       - /app/packages/db/node_modules
@@ -26,11 +28,19 @@ services:
       - "3000:3000"
       - "3001:3001"
       - "3002:3002"
+      - "3003:3003"
+      - "3004:3004"
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY:-pk_test_placeholder}
-      - CLERK_SECRET_KEY=${CLERK_SECRET_KEY:-sk_test_placeholder}
-    command: pnpm dev
+      - TURBO_TELEMETRY_DISABLED=1
+      - NEXT_TELEMETRY_DISABLED=1
+      # Cross-app URLs (browser-side, so localhost is correct)
+      - NEXT_PUBLIC_WEB_URL=http://localhost:3000
+      - NEXT_PUBLIC_CONSOLE_URL=http://localhost:3001
+      - NEXT_PUBLIC_PARTNERS_URL=http://localhost:3002
+      - NEXT_PUBLIC_UNION_EYES_URL=http://localhost:3003
+      - NEXT_PUBLIC_ABR_URL=http://localhost:3004
+    command: pnpm dev:docker
 
   # Public website (production)
   web:
@@ -42,6 +52,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+      - NEXT_PUBLIC_CONSOLE_URL=${NEXT_PUBLIC_CONSOLE_URL:-http://localhost:3001}
+      - NEXT_PUBLIC_PARTNERS_URL=${NEXT_PUBLIC_PARTNERS_URL:-http://localhost:3002}
     restart: unless-stopped
 
   # Console app (production)
@@ -60,6 +72,10 @@ services:
       - NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
       - NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/console
       - NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/console
+      - NEXT_PUBLIC_WEB_URL=${NEXT_PUBLIC_WEB_URL:-http://localhost:3000}
+      - NEXT_PUBLIC_PARTNERS_URL=${NEXT_PUBLIC_PARTNERS_URL:-http://localhost:3002}
+      - NEXT_PUBLIC_UNION_EYES_URL=${NEXT_PUBLIC_UNION_EYES_URL:-http://localhost:3003}
+      - NEXT_PUBLIC_ABR_URL=${NEXT_PUBLIC_ABR_URL:-http://localhost:3004}
     restart: unless-stopped
 
   # Partner Portal (production)
@@ -78,6 +94,41 @@ services:
       - NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
       - NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/portal
       - NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/portal
+    restart: unless-stopped
+
+  # Union Eyes app (production)
+  union-eyes:
+    build:
+      context: .
+      target: union-eyes
+      dockerfile: Dockerfile
+    ports:
+      - "3003:3003"
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
+      - CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
+      - DATABASE_URL=${DATABASE_URL}
+      - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:3003}
+      - NEXT_PUBLIC_WEB_URL=${NEXT_PUBLIC_WEB_URL:-http://localhost:3000}
+      - NEXT_PUBLIC_CONSOLE_URL=${NEXT_PUBLIC_CONSOLE_URL:-http://localhost:3001}
+    restart: unless-stopped
+
+  # ABR app (production)
+  abr:
+    build:
+      context: .
+      target: abr
+      dockerfile: Dockerfile
+    ports:
+      - "3004:3004"
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
+      - CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
+      - DATABASE_URL=${DATABASE_URL}
+      - NEXT_PUBLIC_WEB_URL=${NEXT_PUBLIC_WEB_URL:-http://localhost:3000}
+      - NEXT_PUBLIC_CONSOLE_URL=${NEXT_PUBLIC_CONSOLE_URL:-http://localhost:3001}
     restart: unless-stopped
 
   # Build-only service (for CI/CD)
