--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo dev",
     "dev:web": "turbo dev --filter=@nzila/web",
     "dev:console": "turbo dev --filter=@nzila/console",
+    "dev:docker": "turbo dev --filter=@nzila/web --filter=@nzila/console --filter=@nzila/partners --filter=@nzila/union-eyes --filter=@nzila/abr --continue",
     "build": "turbo build",
     "build:web": "turbo build --filter=@nzila/web",
     "build:console": "turbo build --filter=@nzila/console",
